# persephone.client.python

./: .gitignore  pyproject.toml  requirements.txt
persephone_client/: main.py
persephone_client/controllers/queue_producer/: controller.py
persephone_client/controllers/schema_validator/: controller.py
persephone_client/core/builder_validator/: interface.py
persephone_client/core/repositories/kafka/: interface.py
persephone_client/core/repositories/persephone/: interface.py
persephone_client/core/schema_validator/: interface.py
persephone_client/core/services/persephone/: interface.py
persephone_client/core/services/schema_validator/: interface.py
persephone_client/domain/enums/schema/: enum.py
persephone_client/domain/schemas/: dtvm_update_user_schema.py  dtvm_user_schema.py  prospect_user_schema.py  suitability_schema.py  table_schema.py  term_schema.py  user_complementary_data_schema.py  user_set_electronic_signature_schema.py
persephone_client/domain/schemas/ebisu/delete_client_bank_account/: schema.py
persephone_client/domain/validators/: schema_validators.py
persephone_client/infraestructure/kafka/: infraestructure.py
persephone_client/interfaces/builder_validator/: interface.py
persephone_client/interfaces/queue_producer/: interface.py
persephone_client/interfaces/schema_validator/: interface.py
persephone_client/repositories/kafka/: repository.py
persephone_client/repositories/persephone/: repository.py
persephone_client/services/builder_validator/: service.py
persephone_client/services/message_validator/: service.py
persephone_client/services/persephone/: service.py
persephone_client/services/queue_producer/: service.py
persephone_client/services/schema_validator/: service.py
persephone_client/utils/: json_schemas.py
tests/persephone_client/: test_main.py
tests/persephone_client/services/queue_producer/: test_service.py
tests/persephone_client/services/schema_validator/: test_service.py
(+44 files in other folders)
